[gd_scene load_steps=3 format=2]

[ext_resource path="res://Content/GlitchableObject/GlitchableObject.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21.0162, 21.9078 )

[node name="GlitchableObject" type="Node2D"]
script = ExtResource( 1 )

[node name="GlitchTimer" type="Timer" parent="."]

[node name="GlitchArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GlitchArea2D"]
shape = SubResource( 1 )
[connection signal="timeout" from="GlitchTimer" to="." method="_on_GlitchTimer_timeout"]
[connection signal="area_entered" from="GlitchArea2D" to="." method="_on_GlitchArea2D_area_entered"]
[connection signal="area_exited" from="GlitchArea2D" to="." method="_on_GlitchArea2D_area_exited"]
